--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/app.js" defer></script>
+    <link href="./css/style.css" rel="stylesheet">
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
-    
+    <header>
+        <h1></h1>
+    </header>
+    <main>
+        <section id="scoreboard">
+        </section>
+
+        <section id="playerOptions">
+        </section>
+        <section id="newGame">
+        </section>
+    </main>
 </body>
 </html>
