--- a/index.html
+++ b/index.html
@@ -4,21 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/app.js" defer></script>
+    <!-- <script src="./js/app.js" defer></script> -->
     <link href="./css/style.css" rel="stylesheet">
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Rock-Paper-Scissors</h1>
     </header>
     <main>
         <section id="scoreboard">
+            <table>
+                <tr>
+                    <th>Player</th>
+                    <th></th>
+                    <th>Computer</th>
+                </tr>
+                <tr>
+                    <td id="player-score">0</td>
+                    <td>scores</td>
+                    <td id="computer-score">0</td>
+                </tr>
+            </table>
         </section>
 
         <section id="playerOptions">
+            <button class="btnSelect" id="Rock">Rock</button>
+            <button class="btnSelect" id="Paper">Paper</button>
+            <button class="btnSelect" id="Scissors">Scissors</button>
         </section>
+
         <section id="newGame">
+            <button id="start">Start a New Game</button>
         </section>
     </main>
 </body>
